[gd_scene load_steps=20 format=3 uid="uid://c6k0vhl5ba3lo"]

[ext_resource type="Script" path="res://scenes/game_objects/player/player.gd" id="1_6hhjf"]
[ext_resource type="PackedScene" uid="uid://g38lucl12bnx" path="res://scenes/components/health_component.tscn" id="2_4eg02"]
[ext_resource type="Texture2D" uid="uid://dtgwak83ih631" path="res://scenes/game_objects/player/player.png" id="2_5c242"]
[ext_resource type="PackedScene" uid="uid://8moua6rficel" path="res://scenes/components/velocity_component.tscn" id="2_csre0"]
[ext_resource type="PackedScene" uid="uid://f846r3k2vdhs" path="res://scenes/abilities/sword_ability_controller/sword_ability_controller.tscn" id="2_ykq0s"]
[ext_resource type="PackedScene" uid="uid://dpb2pclf6b7xv" path="res://scenes/components/random_stream_player_2d_component.tscn" id="5_f2seg"]
[ext_resource type="AudioStream" uid="uid://cejchrhij8ur" path="res://assets/audio/impactMining_000.ogg" id="6_5586d"]
[ext_resource type="AudioStream" uid="uid://01psy0xydlsl" path="res://assets/audio/impactMining_001.ogg" id="7_t88vs"]
[ext_resource type="AudioStream" uid="uid://ldw7b7lspjwk" path="res://assets/audio/impactMining_002.ogg" id="8_3041x"]
[ext_resource type="AudioStream" uid="uid://dokvgj556rvca" path="res://assets/audio/impactMining_003.ogg" id="9_68j6n"]
[ext_resource type="AudioStream" uid="uid://c4ss6v2d5087b" path="res://assets/audio/impactMining_004.ogg" id="10_df7fc"]

[sub_resource type="Animation" id="Animation_n6eqc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_13xnc"]
resource_name = "death"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.243137, 1, 1, 0.160784), Color(1, 1, 1, 1), Color(0.243137, 1, 1, 0.160784), Color(1, 1, 1, 1), Color(0.243137, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_l3j10"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.261799, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(0.732043, 3.03143, 2.92817, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.1), Vector2(1.1, 0.8), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tjq6m"]
_data = {
"RESET": SubResource("Animation_n6eqc"),
"death": SubResource("Animation_13xnc"),
"walk": SubResource("Animation_l3j10")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wviri"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_gsktq"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sstn2"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b8jhi"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_6hhjf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tjq6m")
}

[node name="VelocityComponent" parent="." instance=ExtResource("2_csre0")]
max_speed = 90
acceleration = 25.0

[node name="HealthComponent" parent="." instance=ExtResource("2_4eg02")]

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("2_ykq0s")]

[node name="HitRandomStreamPlayer" parent="." instance=ExtResource("5_f2seg")]
streams = Array[AudioStream]([ExtResource("6_5586d"), ExtResource("7_t88vs"), ExtResource("8_3041x"), ExtResource("9_68j6n"), ExtResource("10_df7fc")])

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -18.0
pivot_offset = Vector2(16, 3)
theme_override_styles/fill = SubResource("StyleBoxFlat_wviri")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_gsktq")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("2_5c242")
offset = Vector2(0, -8)

[node name="CollisionArea2D" type="Area2D" parent="."]
visible = false
position = Vector2(0, -7)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
shape = SubResource("CircleShape2D_sstn2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_b8jhi")
